# purescript-miraculix

./: .gitignore  Control.Alt.html  Control.Alternative.html  Control.Applicative.html  Control.Apply.html  Control.Biapplicative.html  Control.Biapply.html  Control.Bind.html  Control.Category.html  Control.Comonad.html  Control.Extend.html  Control.Lazy.html  Control.Monad.ST.Class.html  Control.Monad.ST.Internal.html  Control.Monad.ST.Ref.html  Control.Monad.ST.html  Control.Monad.html  Control.MonadPlus.html  Control.MonadZero.html  Control.Plus.html  Control.Semigroupoid.html  Data.Array.NonEmpty.Internal.html  Data.Array.NonEmpty.html  Data.Array.Partial.html  Data.Array.ST.Iterator.html  Data.Array.ST.Partial.html  Data.Array.ST.html  Data.Array.html  Data.Bifoldable.html  Data.Bifunctor.Join.html  Data.Bifunctor.html  Data.Bitraversable.html  Data.Boolean.html  Data.BooleanAlgebra.html  Data.Bounded.Generic.html  Data.Bounded.html  Data.CommutativeRing.html  Data.Comparison.html  Data.Const.html  Data.Decidable.html  (+228 more)
.github/workflows/: ci.yml
docs/: Tasks.md
docs/nix/: 404.html  app-9b2ab611e52fbc773285.js  app-9b2ab611e52fbc773285.js.map  (+13 more)
example-project/: README.md  packages.dhall  spago.dhall  test.sh
git-hooks/: pre-commit  pre-push
index/: meta.js  modules.js  packages.js
materialized/: bundle.nix
mk-miraculix-lite/: package.json  script.ts
nix-example/: test.nix
pkgs-hs/opt-task/: opt-task.cabal
pkgs-hs/opt-task/src/: OptTask.hs
scripts/: check-git-status.sh
src/: DoctorNix.purs  Miraculix.purs  TS.purs
tasks/: package.json  script.sh
(+815 files in other folders)
