cabal-version:      2.4
name:               opt-task
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Michael Bock
maintainer:         me@thought2.de

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  OptTask

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
      , base
      , turtle
      , optparse-applicative
      , process
      , text
      , chalk
      , dot
    hs-source-dirs:   src
    default-language: Haskell2010
